Resident doctor can manage inpatient by rti is updated. Just doing for specialist following

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 server.port = 8090
+database.driverClassName = org.postgresql.Driver
+database.url = jdbc:postgresql://localhost:5432/Hospital
+database.userName = postgres
+database.password = 8826
+spring.jpa.defer-datasource-initialization=true
