--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ database.url = jdbc:postgresql://localhost:5432/Hospital
 database.userName = postgres
 database.password = 8826
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.properties.hibernate.type=trace
+spring.jpa.show-sql=true
