Final version design and mapping trigger by code in java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,9 @@ database.driverClassName = org.postgresql.Driver
 database.url = jdbc:postgresql://localhost:5432/Hospital
 database.userName = postgres
 database.password = 8826
-spring.jpa.defer-datasource-initialization=true
+#spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
+#spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.type=trace
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
