--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8090
 database.driverClassName = org.postgresql.Driver
 database.url = jdbc:postgresql://localhost:5432/Hospital
 database.userName = postgres
-database.password = 3010
+database.password = 8826
 #spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
@@ -12,5 +12,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.defer-datasource-initialization=true
 #spring.jpa.properties.hibernate.use_sql_comments=true
-spring.resources.static-locations=classpath:/resources
+spring.web.resources.static-locations=classpath:/resources
 spring.mvc.hiddenmethod.filter.enabled=true
