--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>hospital</finalName>
     </build>
 
 </project>
