--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,8 @@
-server.port = 8090
-database.driverClassName = org.postgresql.Driver
-database.url = jdbc:postgresql://localhost:5432/Hospital
-database.userName = postgres
-database.password = 8826
-
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.type=trace
-spring.jpa.show-sql=true
+server.port=8090
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=postgres
+spring.datasource.password=8826
+spring.datasource.url=jdbc:postgresql://localhost:5432/Hospital
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.web.resources.static-locations=classpath:/resources
-spring.mvc.hiddenmethod.filter.enabled=true
+
